# hsfnord

./: .ghci  .gitignore  Main.hs  README.md  default.nix  easymode.bash  hardmode.bash  hsfnord.cabal  project0.cabal  rerun.bash  start.bash
etc/: example.cfg
nix/: default.nix  release.nix  shell.nix  text-icu.nix
scripts/: build  no-template-haskell  rebuild  rebuild.bash  reload  rerun  rerun.bash  start  start.bash  watch
src/: Config.hs  Lib.hs  Main.hs
test/: Main.hs  STLC.hs
