name:                hsfnord
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  -- exposed-modules:
  --     Lib
  other-modules:
      Paths_hsfnord
  default-language: Haskell2010

executable hsfnord-exe
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Paths_hsfnord

  default-language: Haskell2010
  ghc-options: -threaded
               -rtsopts=all
               -with-rtsopts=-N
               
               -- Change to 1 or 2 for optimizations.
               -O0

               -- Literate haskell preprocessor
               -pgmL markdown-unlit
               
               -- Sanity check GHC
               -dcore-lint
               
               -Wall
               -fwarn-incomplete-uni-patterns
               -fwarn-incomplete-record-updates
               -fwarn-missing-import-lists
               -fwarn-monomorphism-restriction
               -fwarn-implicit-prelude
               -fwarn-missing-local-signatures
               -fwarn-missing-exported-signatures
               -fwarn-missing-home-modules
               -fwarn-identities
               -fwarn-redundant-constraints
               
               -- Future-proofing
               -Wcompat

               -- Make warnings fatal
               -Werror

               -- Turn back into non-fatal warnings
               -Wwarn=missing-local-signatures
               -Wwarn=missing-import-lists
               -Wwarn=missing-home-modules

               -- Less noise
               -fhide-source-paths
               

  default-extensions: OverloadedStrings
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      TypeSynonymInstances
                      MultiParamTypeClasses
                      FunctionalDependencies
                      NoMonomorphismRestriction
                      GADTs
                      BangPatterns
                      DeriveGeneric
                      ScopedTypeVariables
                    
                      -- Extras
                      NoImplicitPrelude
                      LiberalTypeSynonyms
                      LambdaCase
                      MultiWayIf
                      BinaryLiterals
                      InstanceSigs

  build-depends: base >=4 && <5
               , semigroups
               , deepseq
               , async

               , text
               , text-icu
               , bytestring
               , utf8-string
               , base64-bytestring
               , base16-bytestring
               , ListLike

               , containers
               , unordered-containers
               , vector
               , array

               , mtl
               , transformers
               , stm
               , lens

               , filepath
               , directory
               , process
               , unix

               , optparse-applicative
               , config-ini

               , fast-logger
               , prometheus

               , protolude
               
               

test-suite hsfnord-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Paths_hsfnord
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hsfnord
               , base >=4 && <5
               , containers
               , unordered-containers
               , text
               , mtl
               , hedgehog

