name:                project0
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable project0-exe
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Lib
  default-language: Haskell2010
  ghc-options: -threaded
               -dcore-lint
               -Werror
               -Wall

               -fwarn-tabs
               -fwarn-incomplete-uni-patterns
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -fwarn-implicit-prelude
               -- -fwarn-missing-local-signatures
               -- -fwarn-missing-import-lists
               -fhide-source-paths

  default-extensions: OverloadedStrings
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , TypeSynonymInstances
                    , MultiParamTypeClasses
                    , FunctionalDependencies
                    , NoMonomorphismRestriction
                    , GADTs
                    , BangPatterns
                    , DeriveGeneric
                    , ScopedTypeVariables

                    , NoImplicitPrelude

  build-depends: base >=4 && <5
               , semigroups
               , deepseq
               , async

               , text
               , bytestring
               , base64-bytestring

               , containers
               , unordered-containers
               , vector
               , array

               , mtl
               , transformers
               , stm
               , lens

               , filepath
               , directory
               , process
               , unix

               , optparse-applicative
               , config-ini

               , fast-logger
               , prometheus

               , protolude
               , lens

