name:                project0
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  -- exposed-modules:
  --     Lib
  other-modules:
      Paths_project0
  default-language: Haskell2010

executable project0-exe
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Paths_project0

  default-language: Haskell2010
  ghc-options: -threaded
               -rtsopts=all
               -with-rtsopts=-N
               
               -- Make warnings into errors
               -Werror

               -- Most errors
               -Wall

               -- Extra errors
               -fwarn-tabs
               -fwarn-incomplete-uni-patterns
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -fwarn-implicit-prelude
               -fwarn-missing-local-signatures
               -fwarn-missing-import-lists
               -fhide-source-paths
               
               -- Turn back into warnings
               -Wwarn=missing-local-signatures
               -Wwarn=missing-import-lists
               -Wwarn=missing-home-modules

  default-extensions: OverloadedStrings
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      TypeSynonymInstances
                      MultiParamTypeClasses
                      FunctionalDependencies
                      NoMonomorphismRestriction
                      GADTs
                      BangPatterns
                      DeriveGeneric
                      ScopedTypeVariables
                    
                      -- Extras
                      NoImplicitPrelude
                      LiberalTypeSynonyms
                      LambdaCase
                      MultiWayIf
                      BinaryLiterals

  build-depends: base >=4 && <5
               , semigroups
               , deepseq
               , async

               , text
               , bytestring
               , base64-bytestring

               , containers
               , unordered-containers
               , vector
               , array

               , mtl
               , transformers
               , stm
               , lens

               , filepath
               , directory
               , process
               , unix

               , optparse-applicative
               , config-ini

               , fast-logger
               , prometheus

               , protolude

test-suite project0-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Paths_project0
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: project0
               , base >=4 && <5
               , containers
               , unordered-containers
               , text
               , mtl
               , hedgehog

